# livrarr

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/librarr-db/: Cargo.toml
crates/librarr-db/migrations/: 001_initial_schema.sql  008_add_grab_media_type.sql  009_add_metadata_enable_flags.sql
crates/librarr-db/src/: lib.rs  mem.rs  pool.rs  sqlite.rs  sqlite_config.rs  sqlite_grab.rs  sqlite_history.rs  sqlite_library_item.rs  sqlite_notification.rs  sqlite_remote_path_mapping.rs  sqlite_root_folder.rs  sqlite_session.rs  sqlite_user.rs  sqlite_work.rs
crates/librarr-download/: Cargo.toml
crates/librarr-download/src/: lib.rs
crates/librarr-server/: Cargo.toml
crates/librarr-server/src/: api_secondary_impl.rs  auth_crypto.rs  auth_impl.rs  auth_service.rs  config.rs  jobs.rs  lib.rs  main.rs  middleware.rs  state.rs
crates/librarr-server/src/handlers/: author.rs  config.rs  download_client.rs  enrichment.rs  filesystem.rs  history.rs  import.rs  indexer.rs  manual_import.rs  mod.rs  notification.rs  profile.rs  queue.rs  release.rs  remote_path_mapping.rs  root_folder.rs  setup.rs  system.rs  work.rs  workfile.rs
crates/librarr-tagwrite/: Cargo.toml
crates/librarr-tagwrite/src/: lib.rs
crates/livrarr-behavioral/: Cargo.toml
crates/livrarr-behavioral/src/: lib.rs  stubs.rs
crates/livrarr-db/: Cargo.toml
crates/livrarr-db/migrations/: 001_initial_schema.sql  002_add_indexers.sql  003_add_author_bibliography.sql  004_remove_userid_from_paths.sql  005_add_preferred_formats.sql  006_add_usenet_support.sql  007_add_indexer_protocol.sql  010_add_livrarr_meta.sql  011_add_email_config.sql  012_add_metadata_source.sql  013_add_detail_url.sql  014_add_grab_content_path.sql  015_rss_sync.sql  016_list_imports.sql  017_readarr_import.sql  018_playback_progress.sql  019_fix_playback_progress_cascade.sql  020_list_import_previews.sql  021_add_library_item_imported_at.sql  022_backfill_imported_at.sql  023_series_monitoring.sql  024_import_retry.sql  025_fix_path_corruption.sql  026_add_cascade_fk.sql  026_cascade_user_fk.sql  027_finalize_schema_version.sql  028_add_work_metadata_provenance.sql  029_add_provider_retry_state.sql  030_add_merge_generation.sql  031_session_cleanup_index.sql  032_notification_dedup_index.sql  033_add_raw_entries.sql  034_bump_schema_version.sql
crates/livrarr-db/src/: cross_user_isolation_tests.rs  lib.rs  pool.rs  sqlite.rs  sqlite_author.rs  sqlite_bibliography.rs  sqlite_common.rs  sqlite_config.rs  sqlite_download_client.rs  sqlite_external_id.rs  sqlite_grab.rs  sqlite_history.rs  sqlite_import.rs  sqlite_indexer.rs  sqlite_library_item.rs  sqlite_list_import.rs  sqlite_notification.rs  sqlite_playback_progress.rs  sqlite_provenance.rs  sqlite_remote_path_mapping.rs  sqlite_retry_state.rs  sqlite_root_folder.rs  sqlite_series.rs  sqlite_series_cache.rs  sqlite_session.rs  sqlite_user.rs  sqlite_work.rs
crates/livrarr-domain/: Cargo.toml
crates/livrarr-domain/src/: keyed_mutex.rs  lib.rs  readarr.rs  services.rs  settings.rs  torznab.rs
crates/livrarr-domain/src/services/: app_config.rs  author.rs  common.rs  download_client_credentials.rs  download_client_settings.rs  email.rs  enrichment.rs  file.rs  grab.rs  history.rs  http.rs  import.rs  import_io.rs  import_service.rs  indexer_credentials.rs  indexer_settings.rs  list.rs  llm.rs  manual_import.rs  matching.rs  mod.rs  monitor.rs  notification.rs  queue.rs  readarr.rs  release.rs  remote_path_mapping.rs  root_folder.rs  rss.rs  series.rs  settings.rs  work.rs
crates/livrarr-download/: Cargo.toml
crates/livrarr-download/src/: grab_service.rs  lib.rs  release_service.rs
crates/livrarr-handlers/: Cargo.toml
crates/livrarr-handlers/src/: accessors.rs  auth.rs  author.rs  config.rs  context.rs  coverproxy.rs  download_client.rs  filesystem.rs  history.rs  indexer.rs  lib.rs  list_import.rs  manual_import.rs  mediacover.rs  middleware.rs  notification.rs  opds.rs  profile.rs  queue.rs  readarr_import.rs  release.rs  remote_path_mapping.rs  root_folder.rs  series.rs  setup.rs  system.rs  types.rs  user.rs  work.rs  workfile.rs
crates/livrarr-handlers/src/types/: api_error.rs  auth.rs  author.rs  config.rs  download_client.rs  history.rs  indexer.rs  notification.rs  pagination.rs  queue.rs  release.rs  remote_path_mapping.rs  root_folder.rs  scan.rs  series.rs  system.rs  work.rs
crates/livrarr-http/: Cargo.toml
crates/livrarr-http/src/: fetcher.rs  lib.rs  rate_limit.rs  ssrf.rs
crates/livrarr-library/: Cargo.toml
crates/livrarr-library/src/: file_service.rs  import_workflow.rs  lib.rs
crates/livrarr-matching/: Cargo.toml
crates/livrarr-matching/src/: lib.rs  m1_embedded.rs  m2_path.rs  m3_string.rs  m4_scoring.rs  reconcile.rs  types.rs  work_dedup.rs
crates/livrarr-metadata/: Cargo.toml
crates/livrarr-metadata/src/: audnexus.rs  author_monitor_workflow.rs  author_service.rs  cover.rs  enrichment_workflow_service.rs  goodreads.rs  hardcover.rs  http_llm.rs  language.rs  lib.rs  list_service.rs  live_config.rs  llm_caller_service.rs  llm_scraper.rs  llm_validator.rs  normalize.rs  openlibrary.rs  parsers.rs  provenance.rs  provider_client.rs  provider_queue.rs  registry.rs  rss_sync_workflow.rs  series_query_service.rs  series_service.rs  title_cleanup.rs  work_service.rs
crates/livrarr-metadata/src/sru/: mappers.rs  mod.rs
crates/livrarr-server/: Cargo.toml
crates/livrarr-server/src/: api_secondary_impl.rs  auth_crypto.rs  auth_impl.rs  auth_service.rs  config.rs  disk.rs  email_service.rs  history_service.rs  import_io_service.rs  import_service.rs  jobs.rs  lib.rs  main.rs  manual_import_scan_service.rs  manual_import_service.rs  matching_service.rs  middleware.rs  notification_service.rs  parsers.rs  queue_service.rs  rate_limit.rs  readarr_client.rs  readarr_import_service.rs  readarr_import_workflow.rs  router.rs  state.rs  tag_service.rs
crates/livrarr-server/src/handlers/: auth.rs  author.rs  config.rs  mod.rs  (+24 more)
crates/livrarr-tagwrite/: Cargo.toml
crates/livrarr-tagwrite/src/: lib.rs
(+178 files in other folders)
