[workspace]
resolver = "2"
members = [
    "crates/librarr-domain",
    "crates/librarr-http",
    "crates/librarr-db",
    "crates/librarr-metadata",
    "crates/librarr-download",
    "crates/librarr-organize",
    "crates/librarr-tagwrite",
    "crates/librarr-jobs",
    "crates/librarr-server",
    "crates/librarr-cli",
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "test-util"] }
trait-variant = "0.1"
async-trait = "0.1"

# Internal crates
librarr-domain = { path = "crates/librarr-domain" }
librarr-http = { path = "crates/librarr-http" }
librarr-db = { path = "crates/librarr-db" }
librarr-metadata = { path = "crates/librarr-metadata" }
librarr-download = { path = "crates/librarr-download" }
librarr-organize = { path = "crates/librarr-organize" }
librarr-tagwrite = { path = "crates/librarr-tagwrite" }
librarr-jobs = { path = "crates/librarr-jobs" }
librarr-server = { path = "crates/librarr-server" }

[profile.release]
strip = true
