[workspace]
resolver = "2"
members = [
    "crates/livrarr-domain",
    "crates/livrarr-http",
    "crates/livrarr-db",
    "crates/livrarr-matching",
    "crates/livrarr-metadata",
    "crates/livrarr-download",
    "crates/livrarr-library",
    "crates/livrarr-tagwrite",
    "crates/livrarr-jobs",
    "crates/livrarr-handlers",
    "crates/livrarr-server",
    "crates/livrarr-cli",
    "crates/livrarr-behavioral",
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1"
trait-variant = "0.1"
tokio-util = "0.7"

# Internal crates
livrarr-domain = { path = "crates/livrarr-domain" }
livrarr-http = { path = "crates/livrarr-http" }
livrarr-db = { path = "crates/livrarr-db" }
livrarr-metadata = { path = "crates/livrarr-metadata" }
livrarr-download = { path = "crates/livrarr-download" }
livrarr-library = { path = "crates/livrarr-library" }
livrarr-tagwrite = { path = "crates/livrarr-tagwrite" }
livrarr-jobs = { path = "crates/livrarr-jobs" }
livrarr-matching = { path = "crates/livrarr-matching" }
livrarr-handlers = { path = "crates/livrarr-handlers" }
livrarr-server = { path = "crates/livrarr-server" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
