[package]
name = "librarr-tagwrite"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
librarr-domain = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
regex-lite = "0.1"
mp4ameta = "0.13"
id3 = "1.16"
