[package]
name = "livrarr-behavioral"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[dependencies]
livrarr-domain = { workspace = true }
livrarr-db = { workspace = true, features = ["test-helpers"] }
tokio = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
trait-variant = { workspace = true }
livrarr-domain = { workspace = true }
livrarr-db = { workspace = true, features = ["test-helpers"] }
livrarr-metadata = { workspace = true }
livrarr-download = { workspace = true }
livrarr-organize = { workspace = true }
livrarr-http = { workspace = true }
axum = "0.8"
assert_matches = "1"
futures = "0.3"
tempfile = "3"

[[test]]
name = "test_metadata_overhaul_domain"
path = "../../tests/behavioral/test_metadata_overhaul_domain.rs"

[[test]]
name = "test_metadata_overhaul_work_db_merge"
path = "../../tests/behavioral/test_metadata_overhaul_work_db_merge.rs"

[[test]]
name = "test_metadata_overhaul_provenance_db"
path = "../../tests/behavioral/test_metadata_overhaul_provenance_db.rs"

[[test]]
name = "test_metadata_overhaul_retry_state_db"
path = "../../tests/behavioral/test_metadata_overhaul_retry_state_db.rs"

[[test]]
name = "test_metadata_overhaul_external_id_db"
path = "../../tests/behavioral/test_metadata_overhaul_external_id_db.rs"

[[test]]
name = "test_metadata_overhaul_merge_engine"
path = "../../tests/behavioral/test_metadata_overhaul_merge_engine.rs"

[[test]]
name = "test_metadata_overhaul_enrichment_service"
path = "../../tests/behavioral/test_metadata_overhaul_enrichment_service.rs"

[[test]]
name = "test_metadata_overhaul_provider_queue"
path = "../../tests/behavioral/test_metadata_overhaul_provider_queue.rs"

# --- Consolidation behavioral tests ---

[[test]]
name = "test_consolidation_http_fetcher"
path = "../../tests/behavioral/test_consolidation_http_fetcher.rs"

[[test]]
name = "test_consolidation_llm_caller"
path = "../../tests/behavioral/test_consolidation_llm_caller.rs"

[[test]]
name = "test_consolidation_file_ops"
path = "../../tests/behavioral/test_consolidation_file_ops.rs"

[[test]]
name = "test_consolidation_work_service"
path = "../../tests/behavioral/test_consolidation_work_service.rs"

[[test]]
name = "test_consolidation_author_service"
path = "../../tests/behavioral/test_consolidation_author_service.rs"

[[test]]
name = "test_consolidation_series_service"
path = "../../tests/behavioral/test_consolidation_series_service.rs"

[[test]]
name = "test_consolidation_release_service"
path = "../../tests/behavioral/test_consolidation_release_service.rs"

[[test]]
name = "test_consolidation_grab_service"
path = "../../tests/behavioral/test_consolidation_grab_service.rs"

[[test]]
name = "test_consolidation_file_service"
path = "../../tests/behavioral/test_consolidation_file_service.rs"

[[test]]
name = "test_consolidation_list_service"
path = "../../tests/behavioral/test_consolidation_list_service.rs"

[[test]]
name = "test_consolidation_import_workflow"
path = "../../tests/behavioral/test_consolidation_import_workflow.rs"

[[test]]
name = "test_consolidation_enrichment_workflow"
path = "../../tests/behavioral/test_consolidation_enrichment_workflow.rs"

[[test]]
name = "test_consolidation_rss_sync"
path = "../../tests/behavioral/test_consolidation_rss_sync.rs"

[[test]]
name = "test_consolidation_author_monitor"
path = "../../tests/behavioral/test_consolidation_author_monitor.rs"

[[test]]
name = "test_consolidation_dto"
path = "../../tests/behavioral/test_consolidation_dto.rs"
