[package]
name = "livrarr-db"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
livrarr-domain = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
