[package]
name = "livrarr-domain"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
trait-variant = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
quick-xml = "0.37"
