[package]
name = "livrarr-download"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
trait-variant = { workspace = true }
livrarr-domain = { workspace = true }
livrarr-db = { workspace = true }
livrarr-http = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.10"
data-encoding = "2"
bendy = { version = "0.6", features = ["std"] }
tracing = "0.1"
url = "2"
