[package]
name = "livrarr-handlers"
version = "0.1.0"
edition = "2021"

[dependencies]
livrarr-domain = { workspace = true }
livrarr-http = { path = "../livrarr-http" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt", "macros", "time", "fs"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
trait-variant = { workspace = true }
tracing = "0.1"
libc = "0.2"
data-encoding = "2"
urlencoding = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
reqwest = { version = "0.12", default-features = false }
quick-xml = "0.37"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
