[package]
name = "livrarr-http"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
livrarr-domain = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
thiserror = { workspace = true }
tokio = { workspace = true }
trait-variant = { workspace = true }
tracing = "0.1"
url = "2"
