[package]
name = "livrarr-library"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
thiserror = { workspace = true }
trait-variant = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
livrarr-domain = { workspace = true }
livrarr-db = { workspace = true }
livrarr-tagwrite = { workspace = true }
tracing = "0.1"
