[package]
name = "livrarr-matching"
version = "0.1.0-alpha3"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
livrarr-domain = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
once_cell = "1"
regex = "1"
rapidfuzz = "0.5"
unicode-normalization = "0.1"
id3 = "1.16"
rbook = "0.4"
mp4ameta = "0.13"
