[package]
name = "livrarr-metadata"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
trait-variant = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
livrarr-domain = { workspace = true }
livrarr-db = { workspace = true }
livrarr-http = { workspace = true }
unicode-normalization = "0.1"
tracing = "0.1"
url = "2"
regex = "1"
