[package]
name = "livrarr-server"
version = "0.1.0-alpha3"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "livrarr"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
trait-variant = { workspace = true }
livrarr-domain = { workspace = true }
livrarr-db = { workspace = true }
livrarr-http = { workspace = true }
livrarr-metadata = { workspace = true }
livrarr-download = { workspace = true }
livrarr-organize = { workspace = true }
livrarr-tagwrite = { workspace = true }
futures = "0.3"
libc = "0.2"
toml = "1.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
argon2 = { version = "0.5", features = ["std"] }
getrandom = { version = "0.2", features = ["std"] }
sha2 = "0.10"
subtle = "2"
hex = "0.4"
axum = { version = "0.8", features = ["macros", "multipart"] }
csv = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "limit", "trace", "set-header"] }
clap = { version = "4", features = ["derive"] }
tokio-util = "0.7"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
quick-xml = "0.37"
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "pool", "hostname", "tracing"] }
uuid = { version = "1", features = ["v4"] }
tower_governor = "0.8.0"
dashmap = "6.1.0"
rapidfuzz = "0.5"
unicode-normalization = "0.1"
once_cell = "1"
regex = "1"
rbook = "0.4"
mp4ameta = "0.13"
id3 = "1.16"
data-encoding = "2.10.0"

[dev-dependencies]
livrarr-db = { workspace = true, features = ["test-helpers"] }
