[package]
name = "livrarr-tagwrite"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
tracing = "0.1"
tempfile = "3"
livrarr-domain = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
repub = { git = "https://github.com/kkodecs/repub", tag = "v0.1.0-alpha" }
mp4ameta = "0.13"
id3 = "1.16"
